# base_module

./: .gitignore  CMakeLists.txt  README.md  export.py  img_generator.py  import_config.py  run.c  test.py  test.sh  train.py  xmake.lua
config/: __init__.py  _batchnorm.py  _conv.py  _layernorm.py  _linear.py  _tensor.py
config/function/: __init__.py  _add.py  _cat.py  _permute.py  _rule.py  _slice.py  _transpose.py  c_function.py
config/module/: __init__.py  _batchnorm.py  _conv.py  _layernorm.py  _linear.py  _pooling.py  _tensor.py
model/: __init__.py  batchnorm.py  conv.py  layernorm.py  tensor.py
model/function/: add.py  cat.py  permute.py  rule.py  slice.py  transpose.py
model/module/: conv.py  linear.py  pooling.py
src/clip/: clip.h  vision.c  vision.h
test/: __init__.py  test.py  test_batchnorm_module.py  test_conv_module.py  test_fuction.py  test_linear_module.py  test_module.py
test/function/: test_relu_function.py
test/module/: test_batchnorm_module.py  test_layernorm_module.py  test_linear_module.py  test_tensor_module.py
